# davinci-resolve-control

./: control.py  dump-nodes.py  dump-nodes.txt  midi-scratchpad.py  pyproject.toml  pywinauto-scratchpad.py  requirements.txt
src/: application_connector.py  control.py  midi_control.py
src/midi/: controller.py  message.py
src/ui_interactor/: element.py  element_map.py  mouse_drag.py  utility.py
test/: test_application_connector.py  test_application_element_map.py  test_element_map.py  test_midi_message.py  test_ui_interactor_element.py  test_utility.py
