[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "davinci_resolve_control"

[tool.pytest.ini_options]
markers = [
    "integration: Requires DaVinci Resolve application running, slow."
]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  ".", "src",
]